# TARTAN

./: Fixing_AI_Hallucinations_with_TARTAN.srt  Fixing_AI_Hallucinations_with_TARTAN.srt.txt  Fixing_AI_Hallucinations_with_TARTAN.txt  Fixing_AI_Hallucinations_with_TARTAN.vtt  Fixing_AI_Hallucinations_with_TARTAN.vtt.txt  README.md  accumulation-to-closure.tex  analogies.md  blog-post.md  conceptual-introduction.md  index.html  operational-protocol.md  persuasion.tex  reconstruction_stability.tex  tartan.tex  transformational_communication-v2.tex  transformational_communication.tex
haskell-scaffold/: LICENSE  README.md  tartan-haskell.cabal
haskell-scaffold/app/: Main.hs
haskell-scaffold/experiments/: Experiment.hs
haskell-scaffold/src/RSVP/: Dynamics.hs
haskell-scaffold/src/Tartan/: CLIO.hs  Consistency.hs  Defect.hs  Grid.hs  Obstruction.hs  Overlap.hs  Repair.hs  Retiling.hs  Tile.hs  Trajectory.hs  Types.hs
haskell-scaffold/src/Visualization/: PPM.hs
haskell-scaffold/test/: Spec.hs
music/: index.html
processing/: Fixing_AI_Hallucinations_with_TARTAN.json  Fixing_AI_Hallucinations_with_TARTAN.srt  Fixing_AI_Hallucinations_with_TARTAN.tsv  Fixing_AI_Hallucinations_with_TARTAN.txt  Fixing_AI_Hallucinations_with_TARTAN.vtt  README.md  Replacing_messages_with_shared_worlds.json  Replacing_messages_with_shared_worlds.srt  Replacing_messages_with_shared_worlds.tsv  Replacing_messages_with_shared_worlds.txt  Replacing_messages_with_shared_worlds.vtt  The-mathematical-certainty-of-AI-hallucinations.json  The-mathematical-certainty-of-AI-hallucinations.srt  (+21 more)
